# durable-async-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/: diagram-sources.md
async_mcp/: README.md  __init__.py  boot-demo.sh  client_config.json  server.py  temporal_task_handlers.py
async_mcp/mcp_client/: __init__.py  __main__.py  llm.py  main.py
async_mcp/tests/: __init__.py  test_mcp_client.py  test_task_handlers.py
bizservice/: README.md  __init__.py  activities.py  worker.py  workflow_cli.py  workflows.py
docs/decisions/: 001-mcp-tasks-and-elicitation.md
docs/design/: architecture-diagram.md  mcp-tasks-architecture.md  tool-architecture.md
docs/plans/: mcp-cli-client.md  temporal-backed-task-handlers.md
docs/research/: mcp-tasks-limitations-research.md  tasks-protocol-gaps.md
durable_sync_mcp/: README.md  claude_desktop_config.json  server.py
samples/: invoice_acme.json
